@@ -2387,6 +2387,26 @@ name|udf
 operator|.
 name|generic
 operator|.
+name|GenericUDFStruct
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|ql
+operator|.
+name|udf
+operator|.
+name|generic
+operator|.
 name|GenericUDFWhen
 import|;
 end_import
@@ -3905,6 +3925,15 @@ argument_list|(
 literal|"map"
 argument_list|,
 name|GenericUDFMap
+operator|.
+name|class
+argument_list|)
+expr_stmt|;
+name|registerGenericUDF
+argument_list|(
+literal|"struct"
+argument_list|,
+name|GenericUDFStruct
 operator|.
 name|class
 argument_list|)
